#
# $Id: Changes,v 1.4 2001/10/22 13:47:15 jmorris Exp $
#
Revision history for Perl extension IPTables::IPv4::IPQueue.

* Sun 03 Dec 2000 James Morris <jmorris@intercode.com.au>
  Version 0.900 alpha release.

* Mon 08 Jan 2001 James Morris <jmorris@intercode.com.au>
  Version 1.20 initial release against iptables 1.2.0.

* Fri Sep 21 2001 James Morris <jmorris@intercode.com.au>
  Updated code, documentation, test script and examples to support
  ipq_read() timeout.  Libipq implementation courtesy of 
  Joost Remijn <remijnj@eidetica.com>.  Thanks Joost!

* Mon 23 Oct 2001 James Morris <jmorris@intercode.com.au>
  Version 1.24 released against iptables 1.2.4 to bring package into
  line with the new ipq_read() timeout feature.
