@@ -1,16 +1,20 @@
 #
-# $Id: passer.pl,v 1.4 2002/01/14 09:15:49 jmorris Exp $
+# $Id: passer6.pl,v 1.2 2002/01/14 09:15:49 jmorris Exp $
 #
 # Example IPQueue application, simply passes packets back to
-# kernel with NF_ACCEPT verdict.
+# kernel with NF_ACCEPT verdict.  This one does IPv6.
 # 
 # Copyright (c) 2000-2002 James Morris <jmorris@intercode.com.au>
 #
 # This code is GPL.
 #
-package passer;
+package passer6;
 use strict;
 $^W = 1;
+
+# sys/socket.ph is really broken on my system
+use constant X_PF_INET6	=>	10;
+
 
 use IPTables::IPv4::IPQueue qw(:constants);
 
@@ -18,7 +22,8 @@ sub main
 {
 	my ($queue, $msg);
 	
-	$queue = new IPTables::IPv4::IPQueue(copy_mode => IPQ_COPY_META)
+	$queue = new IPTables::IPv4::IPQueue(copy_mode => IPQ_COPY_META,
+	                                     protocol => X_PF_INET6)
 		or die IPTables::IPv4::IPQueue->errstr;
 
 	while (1) {
