@@ -1,5 +1,5 @@
 #
-# $Id: Changes,v 1.4 2001/10/22 13:47:15 jmorris Exp $
+# $Id: Changes,v 1.5 2001/11/24 09:29:58 jmorris Exp $
 #
 Revision history for Perl extension IPTables::IPv4::IPQueue.
 
@@ -18,3 +18,7 @@ Revision history for Perl extension IPTables::IPv4::IPQueue.
   Version 1.24 released against iptables 1.2.4 to bring package into
   line with the new ipq_read() timeout feature.
 
+* Sat 24 Nov 2001 James Morris <jmorris@intercode.com.au>
+  Added support for IPv6, which was implemented in libipq by
+  Fernando Anton.
+  
